// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for azure 1`] = `
<Fragment>
  <h1
    className="spacer-top huge-spacer-bottom"
  >
    onboarding.tutorial.choose_method
  </h1>
  <div
    className="tutorial-selection"
  >
    <p
      className="big-spacer-bottom"
    >
      onboarding.tutorial.choose_method.devops_platform.description
    </p>
    <div
      className="display-flex-start display-flex-wrap"
    >
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-azure-pipelines"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/azure-pipelines.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.azure-pipelines
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-other-ci"
        onClick={[Function]}
        type="button"
      >
        <EllipsisIcon
          size={60}
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.other-ci
        </div>
      </button>
    </div>
    <p
      className="big-spacer-bottom spacer-top"
    >
      onboarding.tutorial.choose_method.locally.description
    </p>
    <div>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-manual"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/manual.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.manual
        </div>
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly for bitbucket server 1`] = `
<Fragment>
  <h1
    className="spacer-top huge-spacer-bottom"
  >
    onboarding.tutorial.choose_method
  </h1>
  <div
    className="tutorial-selection"
  >
    <p
      className="big-spacer-bottom"
    >
      onboarding.tutorial.choose_method.devops_platform.description
    </p>
    <div
      className="display-flex-start display-flex-wrap"
    >
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-jenkins"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/jenkins.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.jenkins
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-other-ci"
        onClick={[Function]}
        type="button"
      >
        <EllipsisIcon
          size={60}
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.other-ci
        </div>
      </button>
    </div>
    <p
      className="big-spacer-bottom spacer-top"
    >
      onboarding.tutorial.choose_method.locally.description
    </p>
    <div>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-manual"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/manual.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.manual
        </div>
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly for github 1`] = `
<Fragment>
  <h1
    className="spacer-top huge-spacer-bottom"
  >
    onboarding.tutorial.choose_method
  </h1>
  <div
    className="tutorial-selection"
  >
    <p
      className="big-spacer-bottom"
    >
      onboarding.tutorial.choose_method.devops_platform.description
    </p>
    <div
      className="display-flex-start display-flex-wrap"
    >
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-jenkins"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/jenkins.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.jenkins
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-github-actions"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          className="spacer-bottom spacer-top"
          height={46}
          src="/images/tutorials/github-actions.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.github-actions
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-azure-pipelines"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/azure-pipelines.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.azure-pipelines
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-other-ci"
        onClick={[Function]}
        type="button"
      >
        <EllipsisIcon
          size={60}
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.other-ci
        </div>
      </button>
    </div>
    <p
      className="big-spacer-bottom spacer-top"
    >
      onboarding.tutorial.choose_method.locally.description
    </p>
    <div>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-manual"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/manual.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.manual
        </div>
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly for gitlab 1`] = `
<Fragment>
  <h1
    className="spacer-top huge-spacer-bottom"
  >
    onboarding.tutorial.choose_method
  </h1>
  <div
    className="tutorial-selection"
  >
    <p
      className="big-spacer-bottom"
    >
      onboarding.tutorial.choose_method.devops_platform.description
    </p>
    <div
      className="display-flex-start display-flex-wrap"
    >
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-jenkins"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/jenkins.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.jenkins
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-gitlab-ci"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/alm/gitlab.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.gitlab-ci
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-other-ci"
        onClick={[Function]}
        type="button"
      >
        <EllipsisIcon
          size={60}
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.other-ci
        </div>
      </button>
    </div>
    <p
      className="big-spacer-bottom spacer-top"
    >
      onboarding.tutorial.choose_method.locally.description
    </p>
    <div>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-manual"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/manual.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.manual
        </div>
      </button>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: azure pipelines tutorial 1`] = `
<Fragment>
  <AzurePipelinesTutorial
    alm="github"
    baseUrl="http://localhost:9000"
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    currentUser={
      Object {
        "groups": Array [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": Array [],
      }
    }
  />
</Fragment>
`;

exports[`should render correctly: github actions tutorial 1`] = `
<Fragment>
  <GitHubActionTutorial
    almBinding={
      Object {
        "alm": "github",
        "key": "key",
      }
    }
    baseUrl="http://localhost:9000"
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    currentUser={
      Object {
        "groups": Array [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": Array [],
      }
    }
    projectBinding={
      Object {
        "alm": "github",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
      }
    }
  />
</Fragment>
`;

exports[`should render correctly: gitlab tutorial 1`] = `
<Fragment>
  <GitLabCITutorial
    baseUrl="http://localhost:9000"
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    currentUser={
      Object {
        "groups": Array [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": Array [],
      }
    }
  />
</Fragment>
`;

exports[`should render correctly: jenkins tutorial 1`] = `
<Fragment>
  <Connect(withAppStateContext(JenkinsTutorial))
    almBinding={
      Object {
        "alm": "github",
        "key": "key",
      }
    }
    baseUrl="http://localhost:9000"
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    projectBinding={
      Object {
        "alm": "bitbucket",
        "key": "foo",
        "monorepo": true,
        "repository": "PROJECT_KEY",
        "slug": "repo-slug",
      }
    }
  />
</Fragment>
`;

exports[`should render correctly: loading 1`] = `
<i
  className="spinner"
/>
`;

exports[`should render correctly: manual tutorial 1`] = `
<Fragment>
  <ManualTutorial
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
      }
    }
    currentUser={
      Object {
        "groups": Array [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": Array [],
      }
    }
  />
</Fragment>
`;

exports[`should render correctly: selection 1`] = `
<Fragment>
  <h1
    className="spacer-top huge-spacer-bottom"
  >
    onboarding.tutorial.choose_method
  </h1>
  <div
    className="tutorial-selection"
  >
    <p
      className="big-spacer-bottom"
    >
      onboarding.tutorial.choose_method.devops_platform.description
    </p>
    <div
      className="display-flex-start display-flex-wrap"
    >
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-jenkins"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/jenkins.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.jenkins
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-github-actions"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          className="spacer-bottom spacer-top"
          height={46}
          src="/images/tutorials/github-actions.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.github-actions
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-bitbucket-pipelines"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/alm/bitbucket.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.bitbucket-pipelines
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-gitlab-ci"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/alm/gitlab.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.gitlab-ci
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-azure-pipelines"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/azure-pipelines.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.azure-pipelines
        </div>
      </button>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-other-ci"
        onClick={[Function]}
        type="button"
      >
        <EllipsisIcon
          size={60}
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.other-ci
        </div>
      </button>
    </div>
    <p
      className="big-spacer-bottom spacer-top"
    >
      onboarding.tutorial.choose_method.locally.description
    </p>
    <div>
      <button
        className="button button-huge display-flex-column big-spacer-right big-spacer-bottom tutorial-mode-manual"
        onClick={[Function]}
        type="button"
      >
        <img
          alt=""
          height={60}
          src="/images/tutorials/manual.svg"
        />
        <div
          className="medium big-spacer-top"
        >
          onboarding.tutorial.choose_method.manual
        </div>
      </button>
    </div>
  </div>
</Fragment>
`;
